make sure of left alignment and move README icons a hair to the left

--- a/styles/packages/file-icons.less
+++ b/styles/packages/file-icons.less
@@ -1,4 +1,9 @@
 body.file-icons-force-show-icons .tree-view .entry > .name:before {
   display: inline-block;
   width: 16px;
+  text-align: left;
+}
+
+span.name.icon.icon-book {
+  margin-left: -4px;
 }
